@@ -1,3 +1,8 @@
+Sun Feb 15 00:45:41 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* array.c (rb_ary_uniq_bang, rb_ary_uniq): unique by the result of
+	  given block.  [ruby-dev:37998]
+
 Sun Feb 15 00:39:44 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* array.c (ary_resize_capa): should not overwrite outside embedded
